manifests/admission-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: check-limits
webhooks:
  - name: law.in.cluster
    rules:
      - apiGroups:
          - "apps"
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - deployments
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: default
        name: admission-webhook
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFM01EWXdNekV5TlRVME5Gb1hEVEkzTURZd01URXlOVFUwTkZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTmh6ClNqMnRWaStnZ1hpNDQveENiVzgyTnh2UnJ6elFHRTR6bEhwZGk1QjJNVHdVanJLaTRkWDc5dzd0OThleW9KS0MKN29rc0wvWm9CckIvSFhOZ1lzVExnQ2xNVVp0eHlwV0F4cUM2bEpwMy9NaWRDVmVBMjgrZ3d0VTBEZHczYXRvdQpXLzVGajJGV3RD [...]
